kubernetes/apps/o11y/grafana/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: o11y
  labels:
    kubernetes.io/metadata.name: o11y
    app.kubernetes.io/name: grafana
    app.kubernetes.io/managed-by: kustomize
