kubernetes/apps/o11y/grafana/base/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: o11y
  annotations:
    external-dns.alpha.kubernetes.io/target: "5825ee88-3939-4e16-ab32-856c6ff7df96.cfargotunnel.com"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  parentRefs:
  - name: kong
    namespace: kong
  hostnames:
  - "grafana.smadja.dev"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: "/"
    backendRefs:
    - name: grafana
      port: 80
